--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1>IMAGE GALLERY DESIGN</h1>
+    <h1>IMAGE GALLERY DESIGN COM JQUERY</h1>
     <div class="container">
     <div class="gallery">
         <a href="img/01.jpg" data-lightbox="mygallery" data-title="IMG 01"><img src="img/01.jpg" alt=""></a>
